@@ -19,7 +19,7 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
 ACE_Pair_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Pair_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy,
-                                                                                                 int delete_cleanup_strategy)
+                                                                                                 bool delete_cleanup_strategy)
   : cleanup_strategy_ (cleanup_strategy),
     delete_cleanup_strategy_ (delete_cleanup_strategy)
 {
@@ -27,7 +27,7 @@ ACE_Pair_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Pair_
     {
       ACE_NEW (this->cleanup_strategy_,
                CLEANUP_STRATEGY);
-      this->delete_cleanup_strategy_ = 1;
+      this->delete_cleanup_strategy_ = true;
     }
 }
 
@@ -118,7 +118,7 @@ ACE_Pair_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::minimum (
 
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
 ACE_Recyclable_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Recyclable_Handler_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy,
-                                                                                                                             int delete_cleanup_strategy)
+                                                                                                                             bool delete_cleanup_strategy)
   : cleanup_strategy_ (cleanup_strategy),
     delete_cleanup_strategy_ (delete_cleanup_strategy)
 {
@@ -126,7 +126,7 @@ ACE_Recyclable_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUT
     {
       ACE_NEW (this->cleanup_strategy_,
                CLEANUP_STRATEGY);
-      this->delete_cleanup_strategy_ = 1;
+      this->delete_cleanup_strategy_ = true;
     }
 }
 
@@ -237,7 +237,7 @@ ACE_Recyclable_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUT
 
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
 ACE_Refcounted_Recyclable_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Refcounted_Recyclable_Handler_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy,
-                                                                                                                                                   int delete_cleanup_strategy)
+                                                                                                                                                   bool delete_cleanup_strategy)
   : cleanup_strategy_ (cleanup_strategy),
     delete_cleanup_strategy_ (delete_cleanup_strategy),
     marked_as_closed_entries_ (0)
@@ -246,7 +246,7 @@ ACE_Refcounted_Recyclable_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATO
     {
       ACE_NEW (this->cleanup_strategy_,
                CLEANUP_STRATEGY);
-      this->delete_cleanup_strategy_ = 1;
+      this->delete_cleanup_strategy_ = true;
     }
 }
 
@@ -362,7 +362,7 @@ ACE_Refcounted_Recyclable_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATO
 
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
 ACE_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Handler_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy,
-                                                                                                       int delete_cleanup_strategy)
+                                                                                                       bool delete_cleanup_strategy)
   : cleanup_strategy_ (cleanup_strategy),
     delete_cleanup_strategy_ (delete_cleanup_strategy)
 {
@@ -370,7 +370,7 @@ ACE_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Ha
     {
       ACE_NEW (this->cleanup_strategy_,
                CLEANUP_STRATEGY);
-      this->delete_cleanup_strategy_ = 1;
+      this->delete_cleanup_strategy_ = true;
     }
 }
 
@@ -455,7 +455,7 @@ ACE_Handler_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::minimu
 
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
 ACE_Null_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Null_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy,
-                                                                                                 int delete_cleanup_strategy)
+                                                                                                 bool delete_cleanup_strategy)
   : cleanup_strategy_ (cleanup_strategy),
     delete_cleanup_strategy_ (delete_cleanup_strategy)
 {
@@ -463,7 +463,7 @@ ACE_Null_Caching_Utility<KEY, VALUE, CONTAINER, ITERATOR, ATTRIBUTES>::ACE_Null_
     {
       ACE_NEW (this->cleanup_strategy_,
                CLEANUP_STRATEGY);
-      this->delete_cleanup_strategy_ = 1;
+      this->delete_cleanup_strategy_ = true;
     }
 }
 
